{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 175,
  "lineage": "20d46227-3044-67fd-1a9d-a96fc54eada7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:route-table/rtb-0e6e6a3c5fd7c2178",
            "default_route_table_id": "rtb-0e6e6a3c5fd7c2178",
            "id": "rtb-0e6e6a3c5fd7c2178",
            "owner_id": "909005389237",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a01d9a952bc50f76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_vpc_route_table_default"
            },
            "tags_all": {
              "Name": "terraform_vpc_route_table_default"
            },
            "vpc_id": "vpc-089863aa3033db500"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_vpc_gateway",
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "run_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_vpc_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:internet-gateway/igw-0a01d9a952bc50f76",
            "id": "igw-0a01d9a952bc50f76",
            "owner_id": "909005389237",
            "tags": {
              "Name": "terraform_vpc_gateway"
            },
            "tags_all": {
              "Name": "terraform_vpc_gateway"
            },
            "vpc_id": "vpc-089863aa3033db500"
          },
          "dependencies": [
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_vpc_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:route-table/rtb-0d7e0695246fa8477",
            "id": "rtb-0d7e0695246fa8477",
            "owner_id": "909005389237",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a01d9a952bc50f76",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_vpc_route_table"
            },
            "tags_all": {
              "Name": "terraform_vpc_route_table"
            },
            "vpc_id": "vpc-089863aa3033db500"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_vpc_gateway",
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetassociation-igwA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d61e0573bb7e9901",
            "route_table_id": "rtb-0d7e0695246fa8477",
            "subnet_id": "subnet-082d94b209993a084"
          },
          "dependencies": [
            "aws_vpc.mesh_vpc",
            "aws_internet_gateway.terraform_vpc_gateway",
            "aws_route_table.terraform_vpc_route_table",
            "aws_subnet.avail_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-dep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:security-group/sg-02c7979758805fdc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c7979758805fdc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "nginx-dep",
            "name_prefix": "",
            "owner_id": "909005389237",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "custom_vpc security Group"
            },
            "tags_all": {
              "Name": "custom_vpc security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-089863aa3033db500"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "avail_zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:subnet/subnet-082d94b209993a084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-082d94b209993a084",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909005389237",
            "tags": {
              "Name": "terraform-vpc-subnet_resource",
              "envFor": "eks-clusterName1"
            },
            "tags_all": {
              "Name": "terraform-vpc-subnet_resource",
              "envFor": "eks-clusterName1"
            },
            "vpc_id": "vpc-089863aa3033db500"
          },
          "dependencies": [
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:subnet/subnet-0442c6ff35bdd058e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0442c6ff35bdd058e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909005389237",
            "tags": {
              "Name": "terraform-vpc-subnet_resource_data",
              "envFor": "eks-cluster"
            },
            "tags_all": {
              "Name": "terraform-vpc-subnet_resource_data",
              "envFor": "eks-cluster"
            },
            "vpc_id": "vpc-089863aa3033db500"
          },
          "dependencies": [
            "aws_vpc.mesh_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mesh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909005389237:vpc/vpc-089863aa3033db500",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4d820146a95df6d",
            "default_route_table_id": "rtb-0e6e6a3c5fd7c2178",
            "default_security_group_id": "sg-0a074478ae9e4bd73",
            "dhcp_options_id": "dopt-0cb8e076",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089863aa3033db500",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e6e6a3c5fd7c2178",
            "owner_id": "909005389237",
            "tags": {
              "Name": "terraform-vpc",
              "env": "eks-cluster",
              "vpc_name": "private_route_table"
            },
            "tags_all": {
              "Name": "terraform-vpc",
              "env": "eks-cluster",
              "vpc_name": "private_route_table"
            }
          }
        }
      ]
    }
  ]
}